--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "api": "npx json-server server/db.json"
+    "api": "npx json-server server/db.json",
+    "api_back": "npx http://localhost:8080/api/v1/products"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
